WIP: transactional emails

--- a/resources/invite-carrot.html
+++ b/resources/invite-carrot.html
@@ -29,20 +29,17 @@
                     <!-- spacer -->
                     <table class="row">
                       <tr>
-                        <th class="small-12 large-12 first last columns">
+                        <th class="small-1 large-2 first columns"></th>
+                        <th class="small-10 large-8 columns">
                           <table>
                             <tr>
-                              <th>
-                                <table class="spacer">
-                                  <tr>
-                                    <td height="40px" style="font-size:40px;line-height:40px;">&#xA0;</td>
-                                  </tr>
-                                </table>
-                              </th>
+                              <th height="40px" class="" style="font-size:40px;line-height:40px;">&#xA0;</td>
                               <th class="expander"></th>
                             </tr>
                           </table>
                         </th>
+                        <th class="small-1 large-2 last columns"></th>
+                        <th class="expander"></th>
                       </tr>
                     </table>
                     <!-- spacer -->
@@ -65,23 +62,20 @@
                     </table>
                     <!-- company logo -->
 
-                    <!-- spacer -->
+                     <!-- spacer -->
                     <table class="row">
                       <tr>
-                        <th class="small-12 large-12 first last columns">
+                        <th class="small-1 large-2 first columns"></th>
+                        <th class="small-10 large-8 columns">
                           <table>
                             <tr>
-                              <th>
-                                <table class="spacer">
-                                  <tr>
-                                    <td height="35px" style="font-size:35px;line-height:35px;">&#xA0;</td>
-                                  </tr>
-                                </table>
-                              </th>
+                              <th height="35px" class="" style="font-size:35px;line-height:35px;">&#xA0;</td>
                               <th class="expander"></th>
                             </tr>
                           </table>
                         </th>
+                        <th class="small-1 large-2 last columns"></th>
+                        <th class="expander"></th>
                       </tr>
                     </table>
                     <!-- spacer -->
@@ -99,28 +93,7 @@
                         <th class="expander"></th>
                       </tr>
                     </table>
-                    <!-- spacer -->
-
-                    <!-- spacer -->
-                    <table class="row">
-                      <tr>
-                        <th class="small-12 large-12 first last columns">
-                          <table>
-                            <tr>
-                              <th>
-                                <table class="spacer">
-                                  <tr>
-                                    <td height="31px" style="font-size:31px;line-height:31px;">&#xA0;</td>
-                                  </tr>
-                                </table>
-                              </th>
-                              <th class="expander"></th>
-                            </tr>
-                          </table>
-                        </th>
-                      </tr>
-                    </table>
-                    <!-- spacer -->
+                    <!-- invite header -->
 
                     <!-- spacer -->
                     <table class="row">
@@ -129,13 +102,25 @@
                         <th class="small-10 large-8 columns">
                           <table>
                             <tr>
-                              <th>
-                                <table class="spacer body-block top">
-                                  <tr>
-                                    <td height="35px" style="font-size:35px;line-height:35px;">&#xA0;</td>
-                                  </tr>
-                                </table>
-                              </th>
+                              <th height="31px" class="" style="font-size:31px;line-height:31px;">&#xA0;</td>
+                              <th class="expander"></th>
+                            </tr>
+                          </table>
+                        </th>
+                        <th class="small-1 large-2 last columns"></th>
+                        <th class="expander"></th>
+                      </tr>
+                    </table>
+                    <!-- spacer -->
+
+                    <!-- spacer -->
+                    <table class="row body-block top">
+                      <tr>
+                        <th class="small-1 large-2 first columns"></th>
+                        <th class="small-10 large-8 columns">
+                          <table>
+                            <tr>
+                              <th height="35px" class="body-spacer" style="font-size:35px;line-height:35px;">&#xA0;</td>
                               <th class="expander"></th>
                             </tr>
                           </table>
@@ -157,22 +142,19 @@
                     <!-- org name -->
 
                     <!-- spacer -->
-                    <table class="row">
+                    <table class="row body-block">
                       <tr>
-                        <th class="small-12 large-12 first last columns">
+                        <th class="small-1 large-2 first columns"></th>
+                        <th class="small-10 large-8 columns">
                           <table>
                             <tr>
-                              <th>
-                                <table class="spacer body-block">
-                                  <tr>
-                                    <td height="28px" style="font-size:28px;line-height:28px;">&#xA0;</td>
-                                  </tr>
-                                </table>
-                              </th>
+                              <th height="28px" class="body-spacer" style="font-size:28px;line-height:28px;">&#xA0;</td>
                               <th class="expander"></th>
                             </tr>
                           </table>
                         </th>
+                        <th class="small-1 large-2 last columns"></th>
+                        <th class="expander"></th>
                       </tr>
                     </table>
                     <!-- spacer -->
@@ -180,32 +162,29 @@
                     <!-- about Carrot -->
                     <table class="row body-block">
                       <tr>
-                        <th class="small-2 large-2 columns first"></th>
-                        <th class="small-8 large-8 columns">
+                        <th class="small-1 large-2 columns first"></th>
+                        <th class="small-10 large-8 columns">
                           <p class="text-center">Carrot is a company digest that gives everyone time to read and react to important information without worrying they missed it.</p>
                         </th>
-                        <th class="small-2 large-2 columns last"></th>
+                        <th class="small-1 large-2 columns last"></th>
                       </tr>
                     </table>
                     <!-- about Carrot -->
 
                     <!-- spacer -->
-                    <table class="row">
+                    <table class="row body-block">
                       <tr>
-                        <th class="small-12 large-12 first last columns">
+                        <th class="small-1 large-2 first columns"></th>
+                        <th class="small-10 large-8 columns">
                           <table>
                             <tr>
-                              <th>
-                                <table class="spacer body-block">
-                                  <tr>
-                                    <td height="35px" style="font-size:35px;line-height:35px;">&#xA0;</td>
-                                  </tr>
-                                </table>
-                              </th>
+                              <th height="35px" class="body-spacer" style="font-size:35px;line-height:35px;">&#xA0;</td>
                               <th class="expander"></th>
                             </tr>
                           </table>
                         </th>
+                        <th class="small-1 large-2 last columns"></th>
+                        <th class="expander"></th>
                       </tr>
                     </table>
                     <!-- spacer -->
@@ -213,8 +192,8 @@
                     <!-- join button -->
                     <table class="row body-block">
                       <tr>
-                        <th class="small-2 large-2 columns first"></th>
-                        <th class="small-8 large-8 columns">
+                        <th class="small-1 large-2 columns first"></th>
+                        <th class="small-10 large-8 columns">
                           <a href="#">
                             <table class="cta-button">
                               <tr>
@@ -225,55 +204,51 @@
                             </table>
                           </a>
                         </th>
-                        <th class="small-2 large-2 columns last"></th>
+                        <th class="small-1 large-2 columns last"></th>
+                        <th class="expander"></th>
                       </tr>
                     </table>
                     <!-- join button -->
 
                     <!-- spacer -->
-                    <table class="row">
+                    <table class="row body-block bottom">
                       <tr>
-                        <th class="small-12 large-12 first last columns">
+                        <th class="small-1 large-2 first columns"></th>
+                        <th class="small-10 large-8 columns">
                           <table>
                             <tr>
-                              <th>
-                                <table class="spacer body-block bottom">
-                                  <tr>
-                                    <td height="40px" style="font-size:40px;line-height:40px;">&#xA0;</td>
-                                  </tr>
-                                </table>
-                              </th>
+                              <th height="40px" class="body-spacer" style="font-size:40px;line-height:40px;">&#xA0;</td>
                               <th class="expander"></th>
                             </tr>
                           </table>
                         </th>
+                        <th class="small-1 large-2 last columns"></th>
+                        <th class="expander"></th>
                       </tr>
                     </table>
                     <!-- spacer -->
                   
-
                     <!-- spacer -->
                     <table class="row">
                       <tr>
-                        <th class="small-12 large-12 first last columns">
+                        <th class="small-1 large-2 first columns"></th>
+                        <th class="small-10 large-8 columns">
                           <table>
                             <tr>
-                              <th>
-                                <table class="spacer">
-                                  <tr>
-                                    <td height="33px" style="font-size:33px;line-height:33px;">&#xA0;</td>
-                                  </tr>
-                                </table>
-                              </th>
+                              <th height="33px" class="" style="font-size:33px;line-height:33px;">&#xA0;</td>
                               <th class="expander"></th>
                             </tr>
                           </table>
                         </th>
+                        <th class="small-1 large-2 last columns"></th>
+                        <th class="expander"></th>
                       </tr>
                     </table>
+                    <!-- spacer -->
 
                     <!-- footer -->
                     <table class="row footer">
+
                       <!-- Carrot logo -->
                       <tr>
                         <th class="small-12 large-12 first last columns">
@@ -290,18 +265,20 @@
                         </th>
                       </tr>
                       <!-- Carrot logo -->
+
                       <!-- spacer -->
                       <tr>
                           <th>
                               <table class="spacer">
                                   <tr>
-                                      <td height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td>
+                                      <th class="" height="10px" style="font-size:10px;line-height:10px;">&#xA0;</td>
                                   </tr>
                               </table>
                           </th>
                           <th class="expander"></th>
                       </tr>
                       <!-- spacer -->
+
                       <!-- sent by -->
                       <tr>
                         <th class="small-12 large-12 first last columns">
@@ -316,6 +293,7 @@
                         </th>
                       </tr>
                       <!-- sent by -->
+
                     </table>
                     <!-- footer -->
                   
