WIP: transactional emails

--- a/resources/board-invite.html
+++ b/resources/board-invite.html
@@ -86,7 +86,7 @@
                         <th class="small-2 large-2 first columns">
                         </th>
                         <th class="small-8 large-8 columns">
-                          <h1 class="text-center">Tim Cook invited you to join the team on Carrot</h1>
+                          <h1 class="text-center">You've been invited to a private section on Carrot</h1>
                         </th>
                         <th class="small-2 large-2 last columns">
                         </th>
@@ -135,7 +135,7 @@
                     <table class="row body-block">
                       <tr>
                         <th class="small-1 large-2 columns first"></th>
-                        <th class="small-10 large-8 columns"><h2 class="text-center">Apple</h2></th>
+                        <th class="small-10 large-8 columns"><h2 class="text-center">Investors</h2></th>
                         <th class="small-1 large-2 columns last"></th>
                       </tr>
                     </table>
@@ -164,7 +164,7 @@
                       <tr>
                         <th class="small-1 large-2 columns first"></th>
                         <th class="small-10 large-8 columns">
-                          <p class="text-center">Carrot is a company digest that gives everyone time to read and react to important information without worrying they missed it.</p>
+                          <p class="text-center">Private sections of the digest are only available to invited team members.</p>
                         </th>
                         <th class="small-1 large-2 columns last"></th>
                       </tr>
@@ -198,7 +198,7 @@
                             <table class="cta-button">
                               <tr>
                                 <th>
-                                  <span class="text-center button-text">Join Apple</span>
+                                  <span class="text-center button-text">View Investors</span>
                                 </th>
                               </tr>
                             </table>
