Private board notification email to new template.

--- a/resources/board-invite.html
+++ b/resources/board-invite.html
@@ -86,7 +86,7 @@
                         <th class="small-2 large-2 first columns">
                         </th>
                         <th class="small-8 large-8 columns">
-                          <h1 class="text-center">You've been invited to a private section on Carrot</h1>
+                          <h1 class="text-center">Tim Cook invited you to a private section on Carrot</h1>
                         </th>
                         <th class="small-2 large-2 last columns">
                         </th>
