--- a/resources/share-entry.html
+++ b/resources/share-entry.html
@@ -8,7 +8,7 @@
     <title></title>
     <!-- Link to the email's CSS, which will be inlined into the email -->
     <link rel="stylesheet" href="css/foundation.css"/>
-    <link rel="stylesheet" href="css/oc-transactional.css"/>
+    <link rel="stylesheet" href="css/oc.css"/>
   </head>
 
   <body>
@@ -164,7 +164,7 @@
                       <tr>
                         <th class="small-1 large-2 columns first"></th>
                         <th class="small-10 large-8 columns">
-                          <p class="text-center attribution">Ryan Le Roux posted to Design</p>
+                          <p class="text-center attribution">Ryan Le Roux posted in Design</p>
                         </th>
                         <th class="small-1 large-2 columns last"></th>
                       </tr>
@@ -219,7 +219,7 @@
                     </table>
                     <!-- spacer -->
 
-                    <!-- join button -->
+                    <!-- view button -->
                     <table class="row body-block">
                       <tr>
                         <th class="small-1 large-2 columns first"></th>
@@ -238,7 +238,7 @@
                         <th class="expander"></th>
                       </tr>
                     </table>
-                    <!-- join button -->
+                    <!-- view button -->
 
                     <!-- spacer -->
                     <table class="row body-block bottom">
