--- a/resources/carrot-invite.html
+++ b/resources/carrot-invite.html
@@ -8,7 +8,7 @@
     <title></title>
     <!-- Link to the email's CSS, which will be inlined into the email -->
     <link rel="stylesheet" href="css/foundation.css"/>
-    <link rel="stylesheet" href="css/oc-transactional.css"/>
+    <link rel="stylesheet" href="css/oc.css"/>
   </head>
 
   <body>
