Change the footer to reflect the latest design.

--- a/resources/email-template.html
+++ b/resources/email-template.html
@@ -71,31 +71,7 @@
                 <td class="small-1 large-2 columns"></td>
                 <td class="small-10 large-8 columns">
                   <!-- Spacer 15 -->
-                  <table class="row footer-table">
-                    <tr>
-                      <th class="small-12 large-12 columns">
-                        <table class="spacer footer-table">
-                          <tr>
-                            <th class="" height="15px" style="font-size:15px; line-height: 15px;"></th>
-                          </tr>
-                        </table>
-                      </th>
-                    </tr>
-                  </table>
-                  <!-- Spacer 15 end -->
-
-                  <!-- Footer top content -->
-                  <table class="row footer-table">
-                    <tr>
-                      <th class="small-12 large-12 columns">
-                        <p class="footer-paragraph">You can <a href="https://beta.carrot.io/profile">unsubscribe</a> to these emails or update your <a href="https://beta.carrot.io/profile">notification settings</a> at anytime.</p>
-                      </th>
-                    </tr>
-                  </table>
-                  <!-- Footer top content End-->
-
-                  <!-- Spacer 15 -->
-                  <table class="row footer-table">
+                  <table class="row footer-table footer-top-border">
                     <tr>
                       <th class="small-12 large-12 columns">
                         <table class="spacer footer-table">
@@ -112,7 +88,18 @@
                   <table class="row footer-table">
                     <tr>
                       <th class="small-12 large-12 columns">
-                        <p class="footer-paragraph bottom-footer">Sent with love from Carrot</p>
+                        <table class="row footer">
+                          <tr>
+                            <th class="small-10 large-10 columns">
+                              <p class="footer-paragraph bottom-footer">Sent via <a href="https://beta.carrot.io" target="_blank">Carrot</a></p>
+                            </th>
+                            <th class="small-2 large-2 columns footer-icon">
+                              <a href="https://beta.carrot.io">
+                                <img src="https://open-company.s3.amazonaws.com/carrot-logo-grey-min.png" width="13" height="24" alt="Carrot" />
+                              </a>
+                            </th>
+                          </tr>
+                        </table>
                       </th>
                     </tr>
                   </table>
