Add a new footer with swtich digest type and unsubscribe links in the first line. Use it for digest emails only.

--- a/resources/email-template-simple-footer.html
+++ b/resources/email-template-simple-footer.html
@@ -91,7 +91,7 @@
                         <table class="row footer">
                           <tr>
                             <th class="small-10 large-10 columns">
-                              <p class="footer-paragraph bottom-footer">Sent via <a href="https://beta.carrot.io" target="_blank">Carrot</a></p>
+                              <p class="footer-paragraph bottom-footer">Sent via <a href="https://beta.carrot.io">Carrot</a></p>
                             </th>
                             <th class="small-2 large-2 columns footer-icon">
                               <a href="https://beta.carrot.io">
