Add header and fix footer of the template.

--- a/resources/email-template.html
+++ b/resources/email-template.html
@@ -16,6 +16,78 @@
         <tr>
           <td valign="middle" align="center">
             <center>
+              <!-- Header -->
+              <table class="row header-table" valign="middle" align="center">
+                <tr>
+                  <td class="small-1 hide-for-large columns" valign="middle" align="left">
+                  <td class="small-10 large-12 columns" valign="middle" align="center">
+                     <!-- Spacer 24 -->
+                    <table class="row header-table">
+                      <tr>
+                        <th class="small-12 large-12 columns">
+                          <table class="spacer header-table">
+                            <tr>
+                              <th class="" height="24px" style="font-size:24px; line-height: 24px;"></th>
+                            </tr>
+                          </table>
+                        </th>
+                      </tr>
+                    </table>
+                    <!-- Spacer 24 end -->
+                   
+                    <!-- header top content -->
+                    <table class="row header-table">
+                      <tr>
+                        <th class="small-12 large-12 columns">
+                          <table class="row header">
+                            <tr>
+                              <th class="small-2 large-2 columns header-icon">
+                                <a href="https://beta.carrot.io">
+                                  <img src="https://open-company-assets.s3.amazonaws.com/img/ML/carrot_logo_with_copy_colors.png" srcSet="https://open-company-assets.s3.amazonaws.com/img/ML/carrot_logo_with_copy_colors@2x.png 2x" width="74" height="18" alt="Carrot" />
+                                </a>
+                              </th>
+                              <th class="small-10 large-10 columns">
+                                <p class="header-paragraph top-header">Your company digest</p>
+                              </th>
+                            </tr>
+                          </table>
+                        </th>
+                      </tr>
+                    </table>
+                    <!-- header top content End-->
+
+                     <!-- Spacer 24 -->
+                    <table class="row header-table header-bottom-border">
+                      <tr>
+                        <th class="small-12 large-12 columns">
+                          <table class="spacer header-table">
+                            <tr>
+                              <th class="" height="24px" style="font-size:24px; line-height: 24px;"></th>
+                            </tr>
+                          </table>
+                        </th>
+                      </tr>
+                    </table>
+                    <!-- Spacer 24 end -->
+
+                    <!-- Spacer 40 -->
+                    <table class="row header-table">
+                      <tr>
+                        <th class="small-12 large-12 columns">
+                          <table class="spacer header-table">
+                            <tr>
+                              <th class="" height="40px" style="font-size:40px; line-height: 40px;"></th>
+                            </tr>
+                          </table>
+                        </th>
+                      </tr>
+                    </table>
+                    <!-- Spacer 40 end -->
+                  </td>
+                  <td class="small-1 hide-for-large columns" valign="middle" align="right">
+                </tr>
+              </table>
+              <!-- Header end -->
               <!-- Content -->
               <table class="row email-content" valign="middle" align="center">
                 <tr>
@@ -108,7 +180,7 @@
                               </th>
                               <th class="small-2 large-2 columns footer-icon">
                                 <a href="https://beta.carrot.io">
-                                  <img src="https://open-company.s3.amazonaws.com/carrot-logo-grey-min.png" width="13" height="24" alt="Carrot" />
+                                  <img src="https://open-company-assets.s3.amazonaws.com/img/ML/carrot_logo_grey_email.png" srcSet="https://open-company-assets.s3.amazonaws.com/img/ML/carrot_logo_grey_email@2x.png 2x" width="13" height="24" alt="Carrot" />
                                 </a>
                               </th>
                             </tr>
