Fix invite, verify and reset emails.

--- a/resources/email-template.html
+++ b/resources/email-template.html
@@ -47,7 +47,7 @@
                                 </a>
                               </th>
                               <th class="small-10 large-10 columns">
-                                <p class="header-paragraph top-header">Your company digest</p>
+                                <p class="header-paragraph top-header">Leadership communication</p>
                               </th>
                             </tr>
                           </table>
