Update template to have smaller space on left and right on mobile.

--- a/resources/email-template.html
+++ b/resources/email-template.html
@@ -19,8 +19,7 @@
               <!-- Header -->
               <table class="row header-table" valign="middle" align="center">
                 <tr>
-                  <td class="small-1 hide-for-large columns" valign="middle" align="left">
-                  <td class="small-10 large-12 columns" valign="middle" align="center">
+                  <td class="small-12 large-12 columns main-wrapper" valign="middle" align="center">
                      <!-- Spacer 24 -->
                     <table class="row header-table">
                       <tr>
@@ -81,15 +80,13 @@
                     </table>
                     <!-- Spacer 40 end -->
                   </td>
-                  <td class="small-1 hide-for-large columns" valign="middle" align="right">
                 </tr>
               </table>
               <!-- Header end -->
               <!-- Content -->
               <table class="row email-content" valign="middle" align="center">
                 <tr>
-                  <td class="small-1 hide-for-large columns" valign="middle" align="left">
-                  <td class="small-10 large-12 columns" valign="middle" align="center">
+                  <td class="small-12 large-12 columns main-wrapper" valign="middle" align="center">
                     <!-- Real content -->
                     <!-- Spacer 15 -->
                     <table class="row">
@@ -130,15 +127,13 @@
                     <!-- Spacer 15 end -->
                     <!-- Real content end -->
                   </td>
-                  <td class="small-1 hide-for-large columns" valign="middle" align="right">
                 </tr>
               </table>
               <!-- Content end -->
               <!-- Footer -->
               <table class="row footer-table" valign="middle" align="center">
                 <tr>
-                  <td class="small-1 hide-for-large columns" valign="middle" align="left">
-                  <td class="small-10 large-12 columns" valign="middle" align="center">
+                  <td class="small-12 large-12 columns main-wrapper" valign="middle" align="center">
                      <!-- Spacer 24 -->
                     <table class="row footer-table">
                       <tr>
@@ -201,7 +196,6 @@
                     </table>
                     <!-- Spacer 40 end -->
                   </td>
-                  <td class="small-1 hide-for-large columns" valign="middle" align="right">
                 </tr>
               </table>
               <!-- Footer end -->
