Update digest with new design.

--- a/resources/email-template.html
+++ b/resources/email-template.html
@@ -37,13 +37,22 @@
                     <!-- header top content -->
                     <table class="row header-table">
                       <tr>
-                        <th class="small-12 large-12 columns">
+                        <th class="small-6 large-6 columns">
                           <table class="row header">
                             <tr>
                               <th class="small-12 large-12 columns header-icon">
                                 <a href="https://beta.carrot.io">
                                   <img src="https://open-company-assets.s3.amazonaws.com/email_images/carrot_logo_with_copy_colors.png" srcSet="https://open-company-assets.s3.amazonaws.com/email_images/carrot_logo_with_copy_colors@2x.png 2x" width="90" height="22" alt="Carrot" />
                                 </a>
+                              </th>
+                            </tr>
+                          </table>
+                        </th>
+                        <th class="small-6 large-6 columns">
+                          <table class="row header">
+                            <tr>
+                              <th class="small-12 large-12 columns header-right">
+                                <span class="header-right-span">Lead with clarity</span>
                               </th>
                             </tr>
                           </table>
@@ -167,13 +176,8 @@
                         <th class="small-12 large-12 columns">
                           <table class="row footer">
                             <tr>
-                              <th class="small-10 large-10 columns">
-                                <p class="footer-paragraph bottom-footer">Sent via <a href="https://beta.carrot.io">Carrot</a></p>
-                              </th>
-                              <th class="small-2 large-2 columns footer-icon">
-                                <a href="https://beta.carrot.io">
-                                  <img src="https://open-company-assets.s3.amazonaws.com/email_images/carrot_logo_grey_email.png" srcSet="https://open-company-assets.s3.amazonaws.com/email_images/carrot_logo_grey_email@2x.png 2x" width="13" height="24" alt="Carrot" />
-                                </a>
+                              <th class="small-12 large-12">
+                                <p class="footer-paragraph bottom-footer">Sent with ♥️ via <a href="https://beta.carrot.io">Carrot</a></p>
                               </th>
                             </tr>
                           </table>
