--- a/resources/email-template.html
+++ b/resources/email-template.html
@@ -177,7 +177,7 @@
                           <table class="row footer">
                             <tr>
                               <th class="small-12 large-12">
-                                <p class="footer-paragraph bottom-footer">Sent with ♥️ via <a href="https://beta.carrot.io">Carrot</a></p>
+                                <p class="footer-paragraph bottom-footer">Sent with <span class="heart" style="background-image: url('https://open-company-assets-non-prod.s3.amazonaws.com/email_images/footer_heart@2x.png');"></span> via <a href="https://beta.carrot.io">Carrot</a></p>
                               </th>
                             </tr>
                           </table>
